@@ -1,3 +1,12 @@
+2014-01-10  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/16428
+	* ld.texinfo: Updated for -static/-non_shared change.
+	* ldlex.h (option_values): Add OPTION_STATIC.
+	* lexsup.c (ld_options): Use OPTION_STATIC for -static/-non_shared.
+	(parse_args): Handle OPTION_STATIC.  Disallow -shared and -pie,
+	-shared and -static, -pie and -static.
+
 2014-01-10  Alan Modra  <amodra@gmail.com>
 
 	PR ld/14207
